# finagent-redrange

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  LICENSE-docs  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
data/: incidents.yaml  seeds.yaml
docs/: HANDOUTS.md  RECOMMENDATIONS.md  WALKTHROUGH.md  real-model-note.md  whitepaper-outline.md  whitepaper.md
notebooks/: demo.ipynb  v0_1_demo.ipynb  v0_2_demo.ipynb
src/finagent_redrange/: __init__.py  __main__.py  cli.py  types.py
src/finagent_redrange/attacker/: __init__.py  engine.py  incident_adapter.py  model_eval.py  robustness.py  seeds.py  transforms.py
src/finagent_redrange/exports/: __init__.py  assurance.py  compliance.py  detection.py  navigator.py  sarif.py  sigma.py
src/finagent_redrange/llm/: client.py
src/finagent_redrange/scenarios/: __init__.py  base.py  cascading_failures.py  data_poisoning.py  excessive_agency.py  indirect_prompt_injection.py  insecure_inter_agent_comms.py  judge.py  multimodal_injection.py  rogue_agent.py  supply_chain.py  (+5 more)
tests/: __init__.py  conftest.py  test_anthropic_adapter.py  test_autonomous.py  test_cli.py  test_embeddings.py  test_export_assurance.py  test_export_compliance.py  test_export_navigator.py  test_export_sarif.py  test_export_sigma.py  test_guardrails.py  test_incident_adapter.py  test_judge.py  test_llm_planner.py  test_model_eval.py  test_multi_agent_guardrails.py  test_multi_agent_system.py  test_regression.py  test_robustness.py  test_seeds.py
(+3 files in other folders)
